# rhythmscape

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  build-log.md  pyproject.toml
config/: cities.yaml  critique_flag.20260423.yaml  critique_flag.yaml  critique_flag_busan_yeongdo.yaml  critique_flag_changwon.yaml  critique_flag_sejong.yaml  critique_flag_seongnam_bundang.yaml  tago.yaml
config/launchd/: com.rhythmscape.tago-batch.anchor.plist  com.rhythmscape.tago-batch.busan_yeongdo.anchor.plist  com.rhythmscape.tago-batch.busan_yeongdo.tick.plist  com.rhythmscape.tago-batch.changwon.anchor.plist  com.rhythmscape.tago-batch.changwon.tick.plist  com.rhythmscape.tago-batch.sejong.anchor.plist  com.rhythmscape.tago-batch.sejong.tick.plist  com.rhythmscape.tago-batch.seongnam_bundang.anchor.plist  com.rhythmscape.tago-batch.seongnam_bundang.tick.plist  com.rhythmscape.tago-batch.tick.plist
docs/: claude-code-handoff-rdi-v0.md  claude-code-handoff-tago-batch.md  sprint-schedule.md  tago-batch-spec.md
docs/analysis/: 271_intervaltime_verification.md  add_city_selection_rationale.md  critique_flag_spec.md  day2_4city_preview.md  day2_dressage_temporal_distribution.md  day2_morning_report.md  day3_dressage_temporal_distribution.md  night_collection_rationale.md  opus_vs_sonnet_comparison.md  prm_spec.md  rdi_day2_summary.md  route_selection_rationale.md  sejong_prescribed_gap.md  sejong_prescription_opacity.md  sejongbis_scrape_plan.md  sentinel_rationale.md
docs/evidence/: 2026-04-22_rules-clarification.md  gyeongju_addcity_rehearsal_20260424.md  tago_first_run_utc.txt
prompts/: README.md
prompts/ko/: lefebvre.md
reports/: busan_yeongdo.html  changwon.html  index.html  sejong.html  seongnam_bundang.html
scripts/: add_city.py  agent_rehearsal.py  dressage_temporal_distribution.py  gen_launchd_intervals.py  night_tick_diagnostic.py  opus_vs_sonnet.py  preview_rdi.py  preview_rdi_4city.py  render_reports.py  scrape_sejongbis_schedule.py
tests/: test_metrics_critique.py  test_metrics_rdi.py
(+25 files in other folders)
