[project]
name = "rhythmscape"
version = "0.1.0"
description = "A Critical Urban Diagnostic Assistant — rhythm, automobility, and embodied residue, mapped and narrated."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Dong-Wan Gimm", email = "dwgimm@gmail.com" },
]
keywords = [
    "critical-geography",
    "rhythmanalysis",
    "urban-studies",
    "automobility",
    "gis",
]

dependencies = []

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/thelevanter/rhythmscape"
Repository = "https://github.com/thelevanter/rhythmscape"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rhythmscape"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
